--- a/index.html
+++ b/index.html
@@ -1173,9 +1173,9 @@
 
                     if (presetName === 'classic') {
                         signatureData.selectedTemplate = 'classic';
-                        signatureData.fullNameStyle = defaultFieldStyle(14, '#000000', true, false);
-                        signatureData.titleStyle = defaultFieldStyle(12, '#000000', true, false);
-                        signatureData.nombreSedeStyle = defaultFieldStyle(12, '#000000');
+                        signatureData.fullNameStyle = defaultFieldStyle(14, '#AAAAAA', true, false);
+                        signatureData.titleStyle = defaultFieldStyle(12, '#AAAAAA', true, false);
+                        signatureData.nombreSedeStyle = defaultFieldStyle(12, '#AAAAAA');
                         signatureData.websiteUrl = '';
                         signatureData.cita = 'La creatividad es la inteligencia divirtiéndose.';
                         signatureData.fontFamily = 'Arial, Helvetica, sans-serif';
